# claude_sidecar

./: .gitignore  CAPABILITIES_PLAN.md  CLAUDE.md  README.md  README.zh-CN.md  SPEC.md  pyproject.toml  sidecar.config.template.json
ongoing/: skill-writing-practices.md
sidecar-manager-skill/: SKILL.md
src/: auto_compact_controller.py  cli.py  config.py  daemon.py  dashboard.py  install_hooks.py  llm_summarizer.py  mcp_server.py  memory_candidates.py  merge_compact_history.py  operation_log.py  paths.py  postcompact_record.py  readiness.py  rolling_summary_writer.py  sidecar.py  sidecar_api.py  sidecar_config.py  sidecar_paths.py  status.py  summary_context.py  userprompt_inject.py
src/compact_sidecar/: api.py  cli.py  paths.py
src/compact_sidecar/hooks/: install.py  postcompact.py  userprompt.py
src/compact_sidecar/mcp/: server.py
src/compact_sidecar/runtime/: memory_candidates.py  merge_compact_history.py  operation_log.py  readiness.py  rolling_summary_writer.py  summary_context.py
src/compact_sidecar/services/: auto_compact_controller.py  clean.py  daemon.py  llm_summarizer.py
src/compact_sidecar/ui/: dashboard.py  status.py
tasks/: plan.md  todo.md
tests/: test_auto_compact_controller.py  test_daemon.py  test_dashboard.py  test_install_hooks.py  test_llm_summarizer.py  test_manual_smoke_flow.py  test_mcp_mutations.py  test_mcp_rehearsal.py  test_mcp_server.py  test_memory_candidates.py  test_merge_compact_history.py  test_operation_log.py  test_packaged_entrypoints.py  test_postcompact_record.py  test_rolling_summary_writer.py  test_sidecar_api.py  test_sidecar_cli.py  test_sidecar_config.py  test_sidecar_paths.py  test_sidecar_skill.py  test_status.py  test_userprompt_inject.py
