[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-compact-sidecar"
version = "0.1.0"
description = "Local Claude Code compact sidecar with hooks, status, daemon, CLI, and MCP entry points."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Compact Sidecar maintainers" }]

[project.scripts]
sidecar = "compact_sidecar.cli:main"
sidecar-mcp = "compact_sidecar.mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "config", "paths"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["compact_sidecar*"]

[tool.setuptools.package-data]
"compact_sidecar" = ["py.typed"]

[tool.setuptools.data-files]
"." = ["sidecar.config.template.json"]
